syntax = "proto3";
package v0;
option go_package = "v0";

import "google/protobuf/any.proto";

message Permission {
    string Description = 1;
    Effect Effect = 2;
    repeated string Subjects = 3;
    repeated Action Actions = 4;
    repeated Condition Conditions = 5;
}

message Condition {
    ConditionNames Name = 1;
    google.protobuf.Any Args = 2;

}
enum Effect {
    EffectUnknown = 0;
    Allow = 1;
    Deny = 2;
}

enum Action {
    ActionUnknown = 0;
    Alter = 1;
    Use = 2;
    EnableDisable = 3;
}

enum ConditionNames {
    ConditionNameUnknown = 0;
    AuthLevelGreater = 1;
}
